<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cam"
            android:title="@string/cam"
            android:icon="@drawable/ic_photo_camera_black_24dp"/>

        <item
            android:id="@+id/mails"
            android:title="@string/email"
            android:icon="@drawable/ic_mail_outline_black_24dp"/>

        <item
            android:id="@+id/gal"
            android:title="@string/gallery"
            android:icon="@drawable/ic_menu_black_24dp"/>

        <item
            android:id="@+id/slide"
            android:title="@string/slide"
            android:icon="@drawable/ic_slideshow_black_24dp"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_slideshow_black_24dp"
                android:title="@string/slide" />

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_mail_outline_black_24dp"
                android:title="@string/nav_header" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cam1"
            android:title="@string/cam"
            android:icon="@drawable/ic_photo_camera_black_24dp"/>

        <item
            android:id="@+id/mails1"
            android:title="@string/email"
            android:icon="@drawable/ic_mail_outline_black_24dp"/>

        <item
            android:id="@+id/gal1"
            android:title="@string/gallery"
            android:icon="@drawable/ic_menu_black_24dp"/>

        <item
            android:id="@+id/slide1"
            android:title="@string/slide"
            android:icon="@drawable/ic_slideshow_black_24dp"/>
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cam2"
            android:title="@string/cam"
            android:icon="@drawable/ic_photo_camera_black_24dp"/>

        <item
            android:id="@+id/mails2"
            android:title="@string/email"
            android:icon="@drawable/ic_mail_outline_black_24dp"/>

        <item
            android:id="@+id/gal2"
            android:title="@string/gallery"
            android:icon="@drawable/ic_menu_black_24dp"/>

        <item
            android:id="@+id/slide2"
            android:title="@string/slide"
            android:icon="@drawable/ic_slideshow_black_24dp"/>
    </group>

</menu>