<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.Toolbar
            android:id="@+id/tool"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<ImageButton-->
                <!--android:id="@+id/back"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:background="@drawable/ic_arrow_back_blue_a200_24dp"-->
                <!--android:contentDescription="@string/todo" />-->

            <!--<ImageView-->
                <!--android:id="@+id/logo"-->
                <!--android:layout_width="49dp"-->
                <!--android:layout_height="69dp"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:background="@drawable/ico_logo"-->
                <!--android:contentDescription="@string/todo" />-->
        <!--</RelativeLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/pw"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="30dp"

                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:text="@string/or"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_fb"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/facebook"
                android:fontFamily="sans-serif"
                android:text="@string/btn_fb"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="20sp"
                tools:targetApi="p" />

            <Button
                android:id="@+id/btn_twitter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_styles"
                android:fontFamily="sans-serif"
                android:text="@string/btn_twitter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="20sp"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/need"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:background="@color/signup"
                android:fontFamily="sans-serif"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_view"/>
</android.support.v4.widget.DrawerLayout>